Test all supported vector widths (#25)
* test both vector species if on 512-bit-capable platform

* test both species on all platforms